# GraftRepository

./: .gitignore  README.md  SCRIBE_DialectStudent_Protocol.md
adapters/: safetensors_loader.py  tokenizer.py
core/: deepseek_v2_lite_tc.py  gemma4_tc.py  gpt_oss20b_tc.py  graft_arena.py  graft_quant.py  graft_repository.py  grm_cuda_router.py  grm_native.py  grm_runtime.py  grm_three_pass.py  kv_graft.py  minicpm3_tc.py  mistral7b_tc.py  paging_telemetry.py  qwen35_tc.py  qwen35_translation_poc.py  qwen3_1p7b_tc.py  qwen3_tc.py  qwen_tc.py
cpp/: CMakeLists.txt  README.md  grm_runtime.cpp  grm_runtime.hpp  grm_runtime_c.h
docs/: DeepSeek-V2-Lite_APA_Latent_INT4.md  FINDING_translation_hits_scribe_dialect_lock.md  GEMMA4_ADAPTER_BUG_HUNT.md  GEMMA4_APA_AUDIT_A1.md  GEMMA4_APA_EXTENSION_PLAN.md  GEMMA4_PORT_LEDGER.md  GPT_OSS_20B_APA_GRM_LEDGER.md  GPT_OSS_20B_APA_GRM_PLAN.md  GPT_OSS_20B_APA_GRM_SYNTHESIS.md  GPT_OSS_20B_H7_EXISTING_MODEL_COMPARISON.md  GPT_OSS_20B_HOUSE_RULES_EXECUTION_PLAN.md  GPT_OSS_20B_TENSORCUDA_FEASIBILITY.md  GRAFT_TRANSLATION_PRIMER.md  GRM3P_DIAG_UNBOUNDED_REPORT.md  GRM_BUG_QUEUE.md  GRM_CUDA_BRIDGE_OVERHEAD_LEDGER.md  GRM_CUDA_BRIDGE_OVERHEAD_PLAN.md  GRM_E2E_RECEIPT_LEDGER.md  GRM_E2E_RECEIPT_PLAN.md  GRM_GEMV_ROUTER_LEDGER.md  GRM_GEMV_ROUTER_PLAN.md  GRM_GEMV_ROUTER_SYNTHESIS.md  GRM_GQA_EXACT_RAGGED_CUDA_LEDGER.md  GRM_GQA_EXACT_RAGGED_CUDA_PLAN.md  GRM_GQA_REGATES_L1_PLAN.md  GRM_GRAFT_QUANT_LEDGER.md  GRM_GRAFT_QUANT_PLAN.md  GRM_IMPORTANCE_LEDGER.md  GRM_IMPORTANCE_PLAN.md  GRM_MLA_CUDA_ROUTE_LEDGER.md  GRM_MLA_CUDA_ROUTE_PLAN.md  GRM_Methodology.md  GRM_PAPER_DRAFT.md  GRM_Primer.md  GRM_RAM_Tiered_Runtime_Build_Plan.md  GRM_REVISION_AWARE_RESOLVER_LEDGER.md  GRM_REVISION_AWARE_RESOLVER_PLAN.md  GRM_REVISION_AWARE_RESOLVER_SYNTHESIS.md  GRM_ROUTE_SEAMS_PLAN.md  GRM_Runtime_Completion_Audit.md  (+34 more)
orders/: GRM3P_DIAG_CONTAM.md  GRM3P_DIAG_DOSE.md  (+29 more)
(+2099 files in other folders)
